--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 spring.servlet.multipart.enabled=true
 
-# Application Configuration
+# Custom Upload Directory
 app.upload.dir=uploads/images/
 app.base.url=http://localhost:8080
 
