--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=rest
+spring.config.import=optional:file:.env[.properties]
 
 # Server Configuration
 server.port=8080
@@ -34,5 +35,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
+
+# Gemini API Configuration
+gemini.api.key=${GEMINI_API_KEY}
 
 
