made company better and added websocket for chat

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,4 +39,13 @@ spring.web.cors.allowed-headers=*
 # Gemini API Configuration
 gemini.api.key=${GEMINI_API_KEY}
 
+# WebSocket Configuration
+spring.websocket.cors.allowed-origins=*
+spring.websocket.cors.allowed-headers=*
+spring.websocket.cors.allowed-methods=*
+
+# Enable debug logging for WebSocket
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.messaging=DEBUG
+
 
