--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,13 +14,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# File Upload Configuration
+# Multipart file upload settings
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
-spring.servlet.multipart.enabled=true
+spring.servlet.multipart.resolve-lazily=false
+
+# File upload directory (optional)
+app.upload.dir=uploads/images
 
 # Custom Upload Directory
-app.upload.dir=uploads/images/
 app.base.url=http://localhost:8080
 
 # OpenAPI/Swagger Configuration
@@ -47,5 +50,10 @@ spring.websocket.cors.allowed-methods=*
 # Enable debug logging for WebSocket
 logging.level.org.springframework.web.socket=DEBUG
 logging.level.org.springframework.messaging=DEBUG
+
+# Logging for debugging
+logging.level.com.ruangkerja.rest.controller.PortfolioController=DEBUG
+logging.level.org.springframework.web.multipart=DEBUG
+logging.level.org.springframework.web.servlet.mvc.method.annotation=DEBUG
 
 
