--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=rest
 spring.config.import=optional:file:.env[.properties]
 
+spring.jackson.serialization.fail-on-empty-beans=false
+
 # Server Configuration
 server.port=8080
 
